Fixed broken Ship Vital Conditions
The Vital condition wouldn't click. Removed extranious :checked
Switched checked="true" to the more corrrect checked="checked"

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1921,8 +1921,8 @@
 				</div>
 				<div></div><!-- empty placeholder -->
 				<!-- row 00 -->
-				<div class="ship-oct ship-default"><input name="attr_bow-resilience1" type="checkbox" value="1" checked="true"><span></span><span class="insec default">InSec</span></div>
-				<div class="ship-oct ship-default"><input name="attr_bow-resilience1" type="checkbox" value="1" checked="true"><span></span><span class="artery default">Artery</span></div>
+				<div class="ship-oct ship-default"><input name="attr_bow-resilience1" type="checkbox" value="1" checked="checked"><span></span><span class="insec default">InSec</span></div>
+				<div class="ship-oct ship-default"><input name="attr_bow-resilience1" type="checkbox" value="1" checked="checked"><span></span><span class="artery default">Artery</span></div>
 
 				<input name="attr_bow_color03" type="hidden" class="inv-color" value="0">
 				<div class="ship-oct new">
@@ -2330,10 +2330,10 @@
 				<div class="ship-oct ship-bottom armor1"><input name="attr_bow-armor1" type="checkbox" value="1"><span></span></div>
 				<div class="ship-oct ship-bottom armor2"><input name="attr_bow-armor2" type="checkbox" value="1"><span></span></div>
 				<div class="ship-oct ship-bottom armor3"><input name="attr_bow-armor3" type="checkbox" value="1"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom resiliance1"><input name="attr_bow-resilience1" type="checkbox" value="1" checked="true"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom sys-integrity1"><input name="attr_bow-sys-integrity1" type="checkbox" value="1" checked="true"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom sys-integrity2"><input name="attr_bow-sys-integrity2" type="checkbox" value="1" checked="true"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom vital1"><input name="attr_bow-vital1" type="checkbox" value="1" checked="true"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom resiliance1"><input name="attr_bow-resilience1" type="checkbox" value="1" checked="checked"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom sys-integrity1"><input name="attr_bow-sys-integrity1" type="checkbox" value="1" checked="checked"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom sys-integrity2"><input name="attr_bow-sys-integrity2" type="checkbox" value="1" checked="checked"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom vital1"><input name="attr_bow-vital1" type="checkbox" value="1" checked="checked"><span></span></div>
 
 				<div class="ship-armor armor21"><input name="attr_bowArmour1Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
 				<div class="ship-armor armor22"><input name="attr_bowArmour2Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
@@ -2364,8 +2364,8 @@
 				</div>
 				<div></div><!-- empty placeholder -->
 				<!-- row 00 -->
-				<div class="ship-oct ship-default"><input name="attr_starboard-resilience1" type="checkbox" value="1" checked="true"><span></span><span class="insec default">InSec</span></div>
-				<div class="ship-oct ship-default"><input name="attr_starboard-resilience1" type="checkbox" value="1" checked="true"><span></span><span class="artery default">Artery</span></div>
+				<div class="ship-oct ship-default"><input name="attr_starboard-resilience1" type="checkbox" value="1" checked="checked"><span></span><span class="insec default">InSec</span></div>
+				<div class="ship-oct ship-default"><input name="attr_starboard-resilience1" type="checkbox" value="1" checked="checked"><span></span><span class="artery default">Artery</span></div>
 
 				<input name="attr_starboard_color03" type="hidden" class="inv-color" value="0">
 				<div class="ship-oct new">
@@ -2773,10 +2773,10 @@
 				<div class="ship-oct ship-bottom armor1"><input name="attr_starboard-armor1" type="checkbox" value="1"><span></span></div>
 				<div class="ship-oct ship-bottom armor2"><input name="attr_starboard-armor2" type="checkbox" value="1"><span></span></div>
 				<div class="ship-oct ship-bottom armor3"><input name="attr_starboard-armor3" type="checkbox" value="1"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom resiliance1"><input name="attr_starboard-resilience1" type="checkbox" value="1" checked="true"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom sys-integrity1"><input name="attr_starboard-sys-integrity1" type="checkbox" value="1" checked="true"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom sys-integrity2"><input name="attr_starboard-sys-integrity2" type="checkbox" value="1" checked="true"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom vital1"><input name="attr_starboard-vital1" type="checkbox" value="1" checked="true"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom resiliance1"><input name="attr_starboard-resilience1" type="checkbox" value="1" checked="checked"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom sys-integrity1"><input name="attr_starboard-sys-integrity1" type="checkbox" value="1" checked="checked"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom sys-integrity2"><input name="attr_starboard-sys-integrity2" type="checkbox" value="1" checked="checked"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom vital1"><input name="attr_starboard-vital1" type="checkbox" value="1" checked="checked"><span></span></div>
 
 				<div class="ship-armor armor21"><input name="attr_starboardArmour1Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
 				<div class="ship-armor armor22"><input name="attr_starboardArmour2Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
@@ -2807,8 +2807,8 @@
 				</div>
 				<div></div><!-- empty placeholder -->
 				<!-- row 00 -->
-				<div class="ship-oct ship-default"><input name="attr_port-resilience1" type="checkbox" value="1" checked="true"><span></span><span class="insec default">InSec</span></div>
-				<div class="ship-oct ship-default"><input name="attr_port-resilience1" type="checkbox" value="1" checked="true"><span></span><span class="artery default">Artery</span></div>
+				<div class="ship-oct ship-default"><input name="attr_port-resilience1" type="checkbox" value="1" checked="checked"><span></span><span class="insec default">InSec</span></div>
+				<div class="ship-oct ship-default"><input name="attr_port-resilience1" type="checkbox" value="1" checked="checked"><span></span><span class="artery default">Artery</span></div>
 
 				<input name="attr_port_color03" type="hidden" class="inv-color" value="0">
 				<div class="ship-oct new">
@@ -3216,10 +3216,10 @@
 				<div class="ship-oct ship-bottom armor1"><input name="attr_port-armor1" type="checkbox" value="1"><span></span></div>
 				<div class="ship-oct ship-bottom armor2"><input name="attr_port-armor2" type="checkbox" value="1"><span></span></div>
 				<div class="ship-oct ship-bottom armor3"><input name="attr_port-armor3" type="checkbox" value="1"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom resiliance1"><input name="attr_port-resilience1" type="checkbox" value="1" checked="true"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom sys-integrity1"><input name="attr_port-sys-integrity1" type="checkbox" value="1" checked="true"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom sys-integrity2"><input name="attr_port-sys-integrity2" type="checkbox" value="1" checked="true"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom vital1"><input name="attr_port-vital1" type="checkbox" value="1" checked="true"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom resiliance1"><input name="attr_port-resilience1" type="checkbox" value="1" checked="checked"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom sys-integrity1"><input name="attr_port-sys-integrity1" type="checkbox" value="1" checked="checked"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom sys-integrity2"><input name="attr_port-sys-integrity2" type="checkbox" value="1" checked="checked"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom vital1"><input name="attr_port-vital1" type="checkbox" value="1" checked="checked"><span></span></div>
 
 				<div class="ship-armor armor21"><input name="attr_portArmour1Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
 				<div class="ship-armor armor22"><input name="attr_portArmour2Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
@@ -3251,8 +3251,8 @@
 				</div>
 				<div></div><!-- empty placeholder -->
 				<!-- row 00 -->
-				<div class="ship-oct ship-default"><input name="attr_stern-resilience1" type="checkbox" value="1" checked="true"><span></span><span class="insec default">InSec</span></div>
-				<div class="ship-oct ship-default"><input name="attr_stern-resilience1" type="checkbox" value="1" checked="true"><span></span><span class="artery default">Artery</span></div>
+				<div class="ship-oct ship-default"><input name="attr_stern-resilience1" type="checkbox" value="1" checked="checked"><span></span><span class="insec default">InSec</span></div>
+				<div class="ship-oct ship-default"><input name="attr_stern-resilience1" type="checkbox" value="1" checked="checked"><span></span><span class="artery default">Artery</span></div>
 
 				<input name="attr_stern_color03" type="hidden" class="inv-color" value="0">
 				<div class="ship-oct new">
@@ -3660,10 +3660,10 @@
 				<div class="ship-oct ship-bottom armor1"><input name="attr_stern-armor1" type="checkbox" value="1"><span></span></div>
 				<div class="ship-oct ship-bottom armor2"><input name="attr_stern-armor2" type="checkbox" value="1"><span></span></div>
 				<div class="ship-oct ship-bottom armor3"><input name="attr_stern-armor3" type="checkbox" value="1"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom resiliance1"><input name="attr_stern-resilience1" type="checkbox" value="1" checked="true"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom sys-integrity1"><input name="attr_stern-sys-integrity1" type="checkbox" value="1" checked="true"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom sys-integrity2"><input name="attr_stern-sys-integrity2" type="checkbox" value="1" checked="true"><span></span></div>
-				<div class="ship-oct ship-default ship-bottom vital1"><input name="attr_stern-vital1" type="checkbox" value="1" checked="true"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom resiliance1"><input name="attr_stern-resilience1" type="checkbox" value="1" checked="checked"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom sys-integrity1"><input name="attr_stern-sys-integrity1" type="checkbox" value="1" checked="checked"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom sys-integrity2"><input name="attr_stern-sys-integrity2" type="checkbox" value="1" checked="checked"><span></span></div>
+				<div class="ship-oct ship-default ship-bottom vital1"><input name="attr_stern-vital1" type="checkbox" value="1" checked="checked"><span></span></div>
 
 				<div class="ship-armor armor21"><input name="attr_sternArmour1Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
 				<div class="ship-armor armor22"><input name="attr_sternArmour2Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
