Removed old Ship Config And Tweaks
Removed redundent ship config
Tweaked Launch Bay grids

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1790,11 +1790,12 @@
 		<div class="launchBayArmourCost">2</div>
 		<div class="launchBayArmourFitting">Armour</div>
 		<div class="launchBayArmourPips">
-			<input type="checkbox" name="attr_tugArmour3Slot" class="checkbox" value="active" /><span></span>&ensp;<input type="checkbox" class="armourConditionSlot" name="attr_tugArmour3Condition" value="damaged" /><span></span>
+			<div class="armour"><input type="checkbox" name="attr_tugArmour3Slot" class="checkbox" value="active" /><span></span>&ensp;<input name="attr_tugArmour3Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
+
 			&emsp;
-			<input type="checkbox" name="attr_tugArmour2Slot" class="checkbox" value="active" /><span></span>&ensp;<input type="checkbox" class="armourConditionSlot" name="attr_tugArmour2Condition" value="damaged" /><span></span>
+			<input type="checkbox" name="attr_tugArmour2Slot" class="checkbox" value="active" /><span></span>&ensp;<input name="attr_tugArmour2Condition" type="checkbox" value="1"><span class="armor-x"></span>
 			&emsp;
-			<input type="checkbox" name="attr_portArmour1Slot" class="checkbox" value="active" /><span></span>&ensp;<input type="checkbox" class="armourConditionSlot" name="attr_tugArmour1Condition" value="damaged" /><span></span>
+			<input type="checkbox" name="attr_portArmour1Slot" class="checkbox" value="active" /><span></span>&ensp;<input name="attr_tugArmour1Condition" type="checkbox" value="1"><span class="armor-x"></span>
 		</div>
 		<div class="launchBayCapacityPips">
 			<input type="radio" class="Reactor" name="attr_tugReactor" value="1" /><span></span>
@@ -1806,12 +1807,11 @@
 		<div class="launchBayOverchargeSymbol"><input type="checkbox" class="Overcharge" name="attr_tugReactorOvercharge" /><span></span></div>
 
 		<!--Condition Slots-->
-		<div class="launchBayTugConditions">
-			<input type="checkbox" class="resilienceConditionSlot" name="attr_tugResilienceSlot2Condition" /><span></span>
-			<input type="checkbox" class="resilienceConditionSlot" name="attr_tugResilienceSlot1Condition" /><span></span>
-			<input type="checkbox" class="integertyConditionSlot" name="attr_tugIntegrityCondition" value="damaged" /><span></span>
-			<input type="checkbox" class="vitalityConditionSlot" name="attr_tugVitalityCondition" value="damaged" /><span></span>
-		</div>
+		<div class="launchBayTugConditionTitle">Conditions</div>
+		<div class="launchBayTugConditionResilience1 resiliance"><input type="checkbox" value="1" name="attr_tugResilienceSlot2Condition" /><span class="resiliance-damage"></span></div>
+		<div class="launchBayTugConditionResilience2 resiliance"><input type="checkbox" name="attr_tugResilienceSlot1Condition" /><span class="resiliance-damage"></span></div>
+		<div class="launchBayTugConditionIntegrity"><input type="checkbox" name="attr_tugIntegrityCondition" value="damaged" /><span class="integrity-damage"></span></div>
+		<div class="launchBayTugConditionVital"><input type="checkbox" name="attr_tugVitalityCondition" value="damaged" /><span class="vital-damage"></span></div>
 		<!--Trailer Printer-->
 		<div class="launchBayTrailerTitle">Trailer Printer</div>
 		<div class="launchBayTrailerCost1">0</div>
@@ -1868,23 +1868,17 @@
 			<input type="checkbox" class="armourConditionSlot" name="attr_fighterArmour1Condition" value="damaged" /><span></span>
 		</div>
 		<!--Condition Slots-->
-		<div class="launchBayTrailerConditions">
-			<input type="checkbox" class="resilienceConditionSlot" name="attr_trailerResilienceSlotCondition" /><span></span>
-			<input type="checkbox" class="integertyConditionSlot" name="attr_trailerIntegrityCondition" value="damaged" /><span></span>
-			<input type="checkbox" class="vitalityConditionSlot" name="attr_trailerVitalityCondition" value="damaged" /><span></span>
+		<div class="launchBayTrailerConditionTitle">Conditions</div>
+			<div class="launchBayTrailerConditionResilience resiliance"><input type="checkbox" value="1" name="attr_trailerResilienceSlotCondition" /><span class="resiliance-damage"></span></div>
+			<div class="launchBayTrailerConditionIntegrity integrity"><input type="checkbox" name="attr_trailerIntegrityCondition" value="damaged" /><span class="integrity-damage"></span></div>
+			<div class="launchBayTrailerConditionVital vital"><input type="checkbox" name="attr_trailerVitalityCondition" value="damaged" /><span class="vital-damage"></span></div>
 		</div>
 	</div>
 	<!-- ------------------- -->
 	<!--  NEW SHIP SECTION   -->
 	<!-- ------------------- -->
-	<div class="row1500">
-		<label style="margin-top: 25px;margin-left: 30px">Show Old Ship Configuration</label>
-		<input style="margin-top: -37px;" name="attr_old-ship-section" type="checkbox" value="1">
-	</div>
-	<!-- Toggle for hiding a section -->
-	<input class="selector-switch oldship" name="attr_old-ship-section" type="checkbox" value="1">
 
-	<div class="row1550 newship hideFlip">
+	<div class="row1050 newship">
 		<h2 class="subtitlesFull">Ship Configuration</h2>
 
 		<div class="colorselector">
@@ -2239,7 +2233,6 @@
 					<input name="attr_bow77" type="checkbox" value="1">
 				</div>
 
-
 				<!-- row 80 -->
 				<input name="attr_bow_color81" type="hidden" class="inv-color" value="">
 				<div class="ship-oct new">
@@ -2334,7 +2327,7 @@
 				<div class="ship-oct ship-default ship-bottom sys-integrity1"><input name="attr_bow-sys-integrity1" type="checkbox" value="1" checked="checked"><span></span></div>
 				<div class="ship-oct ship-default ship-bottom sys-integrity2"><input name="attr_bow-sys-integrity2" type="checkbox" value="1" checked="checked"><span></span></div>
 				<div class="ship-oct ship-default ship-bottom vital1"><input name="attr_bow-vital1" type="checkbox" value="1" checked="checked"><span></span></div>
-
+				<!-- Armour and Conditions-->
 				<div class="ship-armor armor21"><input name="attr_bowArmour1Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
 				<div class="ship-armor armor22"><input name="attr_bowArmour2Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
 				<div class="ship-armor armor23"><input name="attr_bowArmour3Condition" type="checkbox" value="1"><span class="armor-x"></span></div>
@@ -2346,7 +2339,6 @@
 				<span class="armor-lbl"></span>
 				<span class="conditions-lbl">Conditions</span>
 			</div>
-
 
 			<!-- starboard -->
 			<div class="ship-block">
@@ -2790,7 +2782,6 @@
 				<span class="conditions-lbl">Conditions</span>
 			</div>
 
-
 			<!-- port -->
 			<div class="ship-block">
 				<label class="ship-label">Port</label>
@@ -3232,8 +3223,6 @@
 				<span class="armor-lbl"></span>
 				<span class="conditions-lbl">Conditions</span>
 			</div>
-
-
 
 			<!-- stern -->
 			<div class="ship-block">
@@ -3677,68 +3666,15 @@
 				<span class="conditions-lbl">Conditions</span>
 			</div>
 
-
 		</div>
 
-	</div>
-
-
-	<!-- -------------------- -->
-	<!--  OLD SHIP CONFIG     -->
-	<!-- -------------------- -->
-
-	<div class="row1550 ship-hide">
-		<!--Section Configuration-->
-		<h2 class="subtitlesFull">Old Ship Configuration</h2>
-		<!--Bow Section-->
-		<div class="columnLeft">
-			<h3>Bow</h3>
-			<div class="halfPage">
-				<h4>Configuration (66 SU)</h4>
-				<fieldset class="repeating_bowSystemsModules">
-					<input type="text" name="attr_bowSystemsModules" class="most"><input type="number" name="attr_bowSystemModuleSU" />SU
-				</fieldset>
-			</div>
-		</div>
-		<!--Starboard Section-->
-		<div class="column450">
-			<h3>Starboard</h3>
-			<div class="halfPage">
-				<h4>Configuration (66 SU)</h4>
-				<fieldset class="repeating_starboardSystemsModules">
-					<input type="text" name="attr_starboardSystemsModules" class="most"><input type="number" name="attr_starboardSystemModuleSU" />SU
-				</fieldset>
-			</div>
-		</div>
-	</div>
-	<div class="row1900 ship-hide">
-		<!--Stern Section-->
-		<div class="columnLeft">
-			<h3>Stern</h3>
-			<div class="halfPage">
-				<h4>Configuration (66 SU)</h4>
-				<fieldset class="repeating_sternSystemsModules">
-					<input type="text" name="attr_sternSystemsModules" class="most"><input type="number" name="attr_sternSystemModuleSU" />SU
-				</fieldset>
-			</div>
-		</div>
-		<!--Port Section-->
-		<div class="column450">
-			<h3>Port</h3>
-			<div class="halfPage">
-				<h4>Configuration (66 SU)</h4>
-				<fieldset class="repeating_portSystemsModules">
-					<input type="text" name="attr_portSystemsModules" class="most"><input type="number" name="attr_portSystemModuleSU" />SU
-				</fieldset>
-			</div>
-		</div>
 	</div>
 
 	<!-- ------------------- -->
 	<!--       CARGO         -->
 	<!-- ------------------- -->
 
-	<div class="row2200">
+	<div class="row1450">
 		<!--Cargo-->
 		<div class="columnLeft">
 			<h2 class="subtitlesFull">Cargo</h2>
@@ -3770,7 +3706,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="row2800">
+	<div class="row1950">
 		<h2 class="subtitlesFull">Letter of Marque</h2>
 		<!--Letter of Marque-->
 		<div class="columnLeft">
