emp skills 2nd row

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -764,7 +764,40 @@
                     <span class="skills-row" data-i18n-list-item="healing">
                         <button type="action" name="act_dice_pool_healing" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="healing">Healing</span>&nbsp;(<span class="small-caps" data-i18n="empathy-abbr">Emp</span>&nbsp;<span name="attr_empathy_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_healing" value="0" min="0" title="@{healing}" />
+                        <select class="input" name="attr_healing_skill_misc" title="@{healing_skill_misc}">
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                            <option value="-4">-4</option>
+                            <option value="-5">-5</option>
+                            <option value="-6">-6</option>
+                        </select>
                         <input class="input-number" type="text" name="attr_healing_total" value="0" title="@{healing_total}" readonly />
+<!-- expand 2nd row -->
+                        <input class="expand" type="checkbox" name="attr_expand_healing" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <div class="healing-row2 skills-row2">
+                            <div class="skills-row2-header">
+                                <div class="skills-box5 column-header"></div>
+                                <div class="skills-box6 column-header"><span>D8</span></div>
+                                <div class="skills-box7 column-header"><span>D8</span></div>
+                                <div class="skills-box8 column-header"><span>D10</span></div>
+                                <div class="skills-box9 column-header"><span>D12</span></div>
+                            </div>
+                            <div class="skills-row2-body">
+                                <textarea class="skills-box5 input-textarea" name="attr_healing_notes" data-i18n-placeholder="notes-text" placeholder="notes..." title="@{healing_notes}"></textarea>
+                                <input class="skills-box6 sheet-input" type="checkbox" name="attr_healing_artifact_die_ocho" value="1" data-i18n-title="mighty" title="Mighty">
+                                <input class="skills-box7 sheet-input" type="checkbox" name="attr_healing_artifact_die_eight" value="1" data-i18n-title="mighty" title="Mighty">
+                                <input class="skills-box8 sheet-input" type="checkbox" name="attr_healing_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
+                                <input class="skills-box9 sheet-input" type="checkbox" name="attr_healing_artifact_die_twelve" value="1" data-i18n-title="legendary" title="Legendary">
+                            </div>
+                        </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="insight">
                         <button type="action" name="act_dice_pool_insight" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="insight">Insight</span>&nbsp;(<span class="small-caps" data-i18n="wits-abbr">Wit</span>&nbsp;<span name="attr_wits_total"></span>)</button>
@@ -779,7 +812,40 @@
                     <span class="skills-row" data-i18n-list-item="manipulation">
                         <button type="action" name="act_dice_pool_manipulation" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="manipulation">Manipulation</span>&nbsp;(<span class="small-caps" data-i18n="empathy-abbr">Emp</span>&nbsp;<span name="attr_empathy_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_manipulation" value="0" min="0" title="@{manipulation}" />
+                        <select class="input" name="attr_manipulation_skill_misc" title="@{manipulation_skill_misc}">
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                            <option value="-4">-4</option>
+                            <option value="-5">-5</option>
+                            <option value="-6">-6</option>
+                        </select>
                         <input class="input-number" type="text" name="attr_manipulation_total" value="0" title="@{manipulation_total}" readonly />
+<!-- expand 2nd row -->
+                        <input class="expand" type="checkbox" name="attr_expand_manipulation" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <div class="manipulation-row2 skills-row2">
+                            <div class="skills-row2-header">
+                                <div class="skills-box5 column-header"></div>
+                                <div class="skills-box6 column-header"><span>D8</span></div>
+                                <div class="skills-box7 column-header"><span>D8</span></div>
+                                <div class="skills-box8 column-header"><span>D10</span></div>
+                                <div class="skills-box9 column-header"><span>D12</span></div>
+                            </div>
+                            <div class="skills-row2-body">
+                                <textarea class="skills-box5 input-textarea" name="attr_manipulation_notes" data-i18n-placeholder="notes-text" placeholder="notes..." title="@{manipulation_notes}"></textarea>
+                                <input class="skills-box6 sheet-input" type="checkbox" name="attr_manipulation_artifact_die_ocho" value="1" data-i18n-title="mighty" title="Mighty">
+                                <input class="skills-box7 sheet-input" type="checkbox" name="attr_manipulation_artifact_die_eight" value="1" data-i18n-title="mighty" title="Mighty">
+                                <input class="skills-box8 sheet-input" type="checkbox" name="attr_manipulation_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
+                                <input class="skills-box9 sheet-input" type="checkbox" name="attr_manipulation_artifact_die_twelve" value="1" data-i18n-title="legendary" title="Legendary">
+                            </div>
+                        </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="marksmanship">
                         <button type="action" name="act_dice_pool_marksmanship" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="marksmanship">Marksmanship</span>&nbsp;(<span class="small-caps" data-i18n="agility-abbr">Agi</span>&nbsp;<span name="attr_agility_total"></span>)</button>
@@ -836,7 +902,40 @@
                     <span class="skills-row" data-i18n-list-item="performance">
                         <button type="action" name="act_dice_pool_performance" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="performance">Performance</span>&nbsp;(<span class="small-caps" data-i18n="empathy-abbr">Emp</span>&nbsp;<span name="attr_empathy_total"></span>)</button>
                         <input class="input-number" type="number" name="attr_performance" value="0" min="0" title="@{performance}" />
+                        <select class="input" name="attr_performance_skill_misc" title="@{performance_skill_misc}">
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                            <option value="-4">-4</option>
+                            <option value="-5">-5</option>
+                            <option value="-6">-6</option>
+                        </select>
                         <input class="input-number" type="text" name="attr_performance_total" value="0" title="@{performance_total}" readonly />
+<!-- expand 2nd row -->
+                        <input class="expand" type="checkbox" name="attr_expand_performance" value="1" data-i18n-title="show-hide" title="show/hide" checked /><span></span>
+                        <div class="performance-row2 skills-row2">
+                            <div class="skills-row2-header">
+                                <div class="skills-box5 column-header"></div>
+                                <div class="skills-box6 column-header"><span>D8</span></div>
+                                <div class="skills-box7 column-header"><span>D8</span></div>
+                                <div class="skills-box8 column-header"><span>D10</span></div>
+                                <div class="skills-box9 column-header"><span>D12</span></div>
+                            </div>
+                            <div class="skills-row2-body">
+                                <textarea class="skills-box5 input-textarea" name="attr_performance_notes" data-i18n-placeholder="notes-text" placeholder="notes..." title="@{performance_notes}"></textarea>
+                                <input class="skills-box6 sheet-input" type="checkbox" name="attr_performance_artifact_die_ocho" value="1" data-i18n-title="mighty" title="Mighty">
+                                <input class="skills-box7 sheet-input" type="checkbox" name="attr_performance_artifact_die_eight" value="1" data-i18n-title="mighty" title="Mighty">
+                                <input class="skills-box8 sheet-input" type="checkbox" name="attr_performance_artifact_die_ten" value="1" data-i18n-title="epic" title="Epic">
+                                <input class="skills-box9 sheet-input" type="checkbox" name="attr_performance_artifact_die_twelve" value="1" data-i18n-title="legendary" title="Legendary">
+                            </div>
+                        </div>
                     </span>
                     <span class="skills-row" data-i18n-list-item="scouting">
                         <button type="action" name="act_dice_pool_scouting" data-i18n-title="update-dice-pool" title="Update the dice pool. Use the 'Roll' button to roll the dice."><span data-i18n="scouting">Scouting</span>&nbsp;(<span class="small-caps" data-i18n="wits-abbr">Wit</span>&nbsp;<span name="attr_wits_total"></span>)</button>
